css/style.css
/*RICK: see the link to the googleapis in index.html, I am including 'Architects Daughter' and 'Quattrocento'
@font-face {
    font-family: 'stefan';
    src: url('../fonts/ArchitectsDaughter.ttf') format('truetype');
}
*/
body {
  font-family: "Quattrocento", sans-serif; }

h1 {
  font-family: "Architects Daughter", cursive; }

.notification-chip {
  display: inline-block;
  background-color: white;
  border-style: solid;
  border-width: 2px;
  border-color: #42c0c4;
  border-radius: 100%;
  width: 30px;
  height: 30px;
  font-size: 17px;
  margin-right: 10px;
  text-align: center;
  color: #42c0c4; }
.notification-chip p {
  color: blue; }

.fleet-btn, .fleet-btn a {
  display: inline-block;
  color: white;
  line-height: 35px;
  border-radius: 100px;
  background: linear-gradient(to right, #FE947D, #FFBDAD);
  border: 0;
  padding-left: 10px;
  padding-right: 10px;
  text-align: center; }

.fleet-btn-full-width {
  display: inline-block;
  color: white;
  line-height: 35px;
  border-radius: 100px;
  background: linear-gradient(to right, #FE947D, #FFBDAD);
  border: 0;
  padding-left: 5px;
  padding-right: 5px;
  text-align: center;
  width: 100%; }

.fleet-btn-round {
  display: inline-block;
  color: white;
  line-height: 45px;
  font-size: 30px;
  border-radius: 100px;
  background: linear-gradient(to right, #FE947D, #FFBDAD);
  border: 0;
  width: 50px;
  height: 50px;
  text-align: center; }

/* Buttons */
.button-accept-requests {
  background: linear-gradient(to right, #FE947D, #FFBDAD) !important;
  border-radius: 50px !important;
  width: 100%;
  border: none !important;
  margin-top: 10px;
  color: white !important;
  cursor: pointer; }

.button-reject-requests {
  background-color: #AFA7A3 !important;
  border-radius: 50px !important;
  width: 100%;
  border: none !important;
  margin-top: 10px;
  color: white !important;
  cursor: pointer; }

.fleet-input {
  width: 100%;
  padding: 7px; }

.title-holder {
  vertical-align: middle;
  line-height: 70px;
  height: 70px;
  color: white;
  text-align: center;
  width: 100%;
  margin-bottom: 10px; }
.title-holder * {
  line-height: 70px; }

.nav-item:hover {
  background-color: #46cacf;
  /* Temporary workaround, at least it looks better */
  height: 100%; }
.nav-item:hover a {
  color: #a8a8a8; }

.nav-item {
  text-align: center;
  width: 200px; }
.nav-item a {
  font-size: 15px; }

.menu-wrapper {
  width: 100%; }

.menu-profile {
  z-index: 100;
  position: absolute;
  height: 100px;
  display: block;
  right: 2%;
  width: 35%;
  color: white;
  background-color: #38b0b4; }
.menu-profile img {
  height: 100%;
  padding: 15px; }
.menu-profile .logout {
  text-align: center;
  height: 25px;
  background-color: #42c0c4; }

/* chatbox */
.wrapper-chatbox {
  padding: 20px 50px; }

.wrapper-chatbox-right {
  background-color: none;
  margin-top: 35px; }

.wrapper-chatbox-left {
  background-color: none;
  margin-top: 25px; }

.wrapper-chatbox-profile {
  border: 1px solid #AFA7A3;
  background-color: white;
  padding: 30px; }

.h-chatbox {
  margin-bottom: 22px; }

.p-bold-chatbox {
  font-weight: bolder;
  margin-right: 5px; }

.profile-picture-chatbox {
  width: 100%;
  text-align: center;
  margin: 20px 0px; }

/* notification amount circle */
.amount-circle {
  border-radius: 50px;
  border: 2px solid #42CDC4;
  color: #42CDC4;
  width: 30px;
  height: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
  float: left;
  margin-right: 10px; }

.p-circle {
  padding-top: 1px;
  font-size: 18px; }

/* Table chatbox */
.header-table-chatbox {
  border: 1px solid #AFA7A3;
  background-color: white;
  color: #AFA7A3;
  font-size: 25px;
  padding: 10px;
  margin: 0;
  margin-top: 20px;
  border-bottom: none; }

.table-chatbox {
  border-collapse: collapse;
  width: 100%;
  background-color: #F4F4F4; }

.table-chatbox td, .table-chatbox th {
  border: 1px solid #AFA7A3;
  padding: 8px;
  background-color: #ededed; }

.table-chatbox tr:nth-child(even) {
  background-color: #F4F4F4; }

.table-chatbox tr:hover {
  background-color: #ddd; }

.table-chatbox th {
  padding-top: 12px;
  padding-bottom: 12px;
  text-align: left;
  background-color: #AFA7A3;
  color: white;
  border: 1px solid #AFA7A3; }

.symbol-in-table {
  width: 20px;
  float: right; }

.new-message-tr {
  background-color: #f4b9e7 !important;
  /* #F4C477!important; */ }

/* Requests */
.wrapper-requests {
  padding: 20px 50px; }

.wrapper-info-requests {
  padding: 20px 30px;
  min-height: 250px;
  display: flex;
  align-items: center;
  background-color: white;
  margin-top: -8px;
  margin-bottom: -8px; }

.p_requests {
  margin-bottom: 0px;
  font-size: 20px; }

.p_requests-accept {
  text-align: center;
  font-size: 20px; }

.p_requests-warning {
  text-align: center;
  font-size: 25px;
  font-weight: bold; }

/* Submit data */
.p_requests-submit {
  float: left;
  font-size: 20px; }

.p_requests-coordinates {
  float: left;
  font-size: 15px; }

.coordinates-margin {
  margin-top: 10px; }

.coordinates-padding {
  width: 14% !important; }

.description-box-requests {
  height: 135px;
  width: 100%;
  border: 1px solid #ccc;
  overflow: auto;
  padding: 5px 10px; }

.form-submit-left {
  text-align: left !important; }

.label-submit {
  margin-top: 8px;
  font-weight: normal; }

.label-submit-coordinator {
  margin-top: 1px;
  margin-left: -10px !important; }

.margin-coordinator {
  margin-left: 10px;
  margin-right: 10px; }

/* Table requests */
.table-requests {
  border-collapse: collapse;
  width: 100%;
  background-color: #F4F4F4;
  border: 1px solid black; }

.table-requests td, #table-requests th {
  padding: 8px;
  border-top: 1px solid black;
  border-bottom: 1px solid black; }

.table-requests tr:nth-child(even) {
  background-color: white;
  border: 1px solid black;
  border-top: 1px solid black;
  border-bottom: 1px solid black; }

.table-requests th {
  padding-top: 12px;
  padding-left: 8px;
  padding-bottom: 12px;
  text-align: left;
  background-color: #AFA7A3;
  color: white;
  border-top: 1px solid black;
  border-bottom: 1px solid black; }

.filter-requests {
  background-color: #AFA7A3;
  border: 1px solid white;
  color: white; }

.chevron-img {
  width: 20px; }

.chevron-down {
  background: url(../images/chevron-down.png); }

.chevron-up {
  background: url(../images/chevron-up.png); }

.h1-profile {
  margin: 0;
  padding: 0;
  margin-bottom: 20px;
  margin-left: -15px;
  color: #88817D; }

.h2-header {
  font-size: 25px;
  font-weight: 300;
  color: white;
  margin: 0;
  padding: 0; }

.h2-profile {
  color: #88817D;
  font-weight: 300; }

p {
  color: #707070; }

.container-profile {
  display: flex;
  justify-content: center; }

.header-column {
  width: 100%;
  padding: 10px 15px 10px 15px;
  background-color: #AFA7A3; }

.button-profile {
  width: 100%;
  padding: 10px;
  background: linear-gradient(to right, #fe947d, #ffbdad);
  margin-top: 20px;
  border-radius: 100px;
  color: white;
  border: none;
  transition: .1s;
  cursor: pointer;
  text-align: center; }

.button-profile:focus {
  outline: none;
  border: none; }

.p-sitemap {
  margin: 0;
  padding: 0;
  margin-left: 40px;
  margin-top: -20px;
  margin-bottom: 20px; }

.a-sitemap {
  color: #707070; }

.a-sitemap:hover {
  color: #707070; }

.footie {
  height: 60px;
  width: 100%;
  background-color: #42CDC4;
  margin-top: 50px; }

/* -------------- Column profile -------------- */
.column-profile {
  border: 1px solid #AFA7A3;
  padding: 35px 45px 35px 45px;
  height: 100%; }

.img-profile {
  width: 100%; }

/* --- Modal --- */
.close {
  color: white !important; }

.close:focus {
  outline: none; }

.close:hover {
  color: white; }

.modal-footer {
  border: none; }

.button-grey, .button-upload-modal {
  margin-top: -13px !important; }

.button-grey {
  background: #A9ABAC !important; }

/* --- End modal --- */
.p-profile {
  margin-top: 20px; }

/* -------------- Columns information -------------- */
.column-personal-information, .column-vessel-information, .column-location-information {
  background-color: #F4F4F4;
  margin-bottom: 30px; }

.table-profile {
  width: 100%; }

.table-profile tr td {
  padding: 10px 15px 10px 15px; }

.table-profile tr {
  transition: .1s; }

.table-profile tr:hover {
  background-color: #E2E2E2; }

.td-name {
  font-weight: 600; }

.td-edit {
  text-align: right; }

.td-edit a {
  color: #767676 !important; }

.container-variables {
  margin-top: 25px; }

.columns-all {
  background-color: #F4F4F4;
  padding: 25px; }

.column-checkbox {
  display: flex;
  flex-direction: column; }

.div-variable {
  margin-top: 10px; }

.button-save-variables {
  width: 200px;
  display: block;
  margin: 0 auto;
  margin-top: 20px; }

.button-save-variables:hover {
  text-decoration: none;
  color: white; }

/* -------------- Input checkbox -------------- */
/* Main Classes */
.myinput {
  position: relative;
  top: 1.4px; }

.myinput[type="checkbox"]:before {
  position: relative;
  display: block;
  width: 11px;
  height: 11px;
  border: 1px solid #808080;
  content: "";
  background: white;
  opacity: 0; }

.myinput[type="checkbox"]:after {
  position: relative;
  display: block;
  left: 2px;
  top: -12px;
  width: 7px;
  height: 7px;
  border-width: 1px;
  border-style: solid;
  border-color: #AFA7A3;
  content: "";
  background: white;
  background-repeat: no-repeat;
  background-position: center; }

.myinput[type="checkbox"]:checked:after {
  background: #AFA7A3; }

.myinput[type="checkbox"]:disabled:after {
  -webkit-filter: opacity(0.4); }

.myinput[type="checkbox"]:not(:disabled):checked:hover:after {
  background: #AFA7A3; }

.myinput[type="checkbox"]:not(:disabled):hover:after {
  background: white;
  border-color: #AFA7A3; }

.myinput[type="checkbox"]:not(:disabled):hover:before {
  border-color: grey; }

/* Large checkboxes */
.myinput.large {
  height: 22px;
  width: 22px;
  cursor: pointer; }

.myinput.large[type="checkbox"]:before {
  width: 20.5px;
  height: 24px; }

.myinput.large[type="checkbox"]:after {
  top: -20px;
  width: 17px;
  height: 17px; }

/* Search bar */
.input-group .form-control {
  border-radius: 20px;
  border: 1px solid #AFA7A3;
  height: 40px; }

.input-group-btn .btn {
  border-radius: 0px 20px 20px 0px;
  background: linear-gradient(to right, #FE947D, #FFBDAD);
  border-left: none;
  border-right: none;
  border: linear-gradient(to right, #FE947D, #FFBDAD);
  height: 40px;
  width: 75px; }

.input-group-btn .btn:hover {
  opacity: 0.8; }

.input-group-btn .btn:focus {
  outline: 0 !important; }

.no-bullets {
  list-style-type: none; }

/*RICK: I included the fonts thrhough googleapis in index.html, see link there
@font-face {
    font-family: 'stefan';
    src: url('../fonts/stefan.ttf') format('truetype');
}
*/
h1 {
  font-family: "Architects Daughter", cursive; }

.special-font *, .special-font {
  font-size: 20px;
  font-family: "Architects Daughter", cursive; }

.yellow {
  background-color: #f3c37b; }

.blue {
  background-color: #42c0c4 !important; }

.light-grey {
  background-color: #ededed !important; }

.grey {
  background-color: #a8a8a8 !important; }

.white-text *, .white-text {
  color: white !important; }

.light-grey-text *, .light-grey-text {
  color: #ededed !important; }

.grey-text *, .grey-text {
  color: #a8a8a8 !important; }

.medium {
  height: 200px !important; }

.border-radius {
  border-radius: 40px; }

.center-width-1-3 {
  width: 50%;
  margin-left: auto;
  margin-right: auto; }

/*# sourceMappingURL=style.css.map */

